# anibridge-metadata

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/anibridge_metadata/: __init__.py
src/anibridge_metadata/core/: __init__.py  config.py  db.py  descriptors.py  enums.py  logging.py
src/anibridge_metadata/models/: __init__.py  database.py  metadata.py
src/anibridge_metadata/services/: __init__.py  batch_collector.py  batch_refresh.py  cache.py  resolver.py  revalidator.py
src/anibridge_metadata/services/providers/: __init__.py  anidb.py  anilist.py  base.py  imdb.py  mal.py  registry.py  tmdb.py  tvdb.py
src/anibridge_metadata/utils/: __init__.py  http.py
src/anibridge_metadata/web/: __init__.py  app.py  dependencies.py
src/anibridge_metadata/web/routes/: __init__.py
src/anibridge_metadata/web/routes/api/: __init__.py  batch.py  dump.py  metadata.py
src/anibridge_metadata/web/routes/z/: __init__.py  livez.py  readyz.py
tests/: conftest.py
tests/models/: __init__.py
tests/services/: __init__.py  test_batch_collector.py  test_cache.py
tests/services/providers/: test_anidb.py  test_imdb.py  test_registry.py  test_tmdb.py  test_tvdb.py
tests/utils/: __init__.py
tests/web/: conftest.py
tests/web/routes/: __init__.py
tests/web/routes/api/: test_batch.py  test_metadata.py
tests/web/routes/z/: __init__.py  test_livez.py  test_readyz.py
